# stringc

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  doxygen.conf  stringc.c  stringc_test.c  target.mk
stringc/: stringc.h
